[app]: switch deprecated URL constructor to URI.create().toURL()